<resources>
    <string name="app_name">YOW</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="book_ride">Book Your Ride</string>
    <string name="your_ride">Your Ride</string>
    <string name="rate_card">Rate Card</string>
    <string name="payments">Payments</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="rideshow">Ride Now</string>
    <string name="notifi">notification</string>
    <string name="security">Manage account security and privacy</string>
    <string name="addcontact">You can add up to 5 contacts</string>
    <string name="safer">Let\'s make travel safer</string>
</resources>
